<resources>
    <string name="add_transaction">Add Transaction</string>
    <string name="back">Back</string>
    <string name="calendar">Calendar</string>
    <string name="pick_date">Pick a date</string>
    <string name="reset_date">Reset Date</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="amount">Amount (R)</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="choose_category">Choose a category</string>
    <string name="add_photo">Add Photo</string>
    <string name="create">Create</string>
    <string name="photo_preview">Photo Preview</string>
    <string name="app_name">Budget Tracker</string>
    <string name="pick_photo">Pick Photo</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="add_category">Add Category</string>
    <string name="calculator_icon">Calculator Icon</string>
    <string name="monthly_limit_optional">Monthly Limit (Optional)</string>
    <string name="create_category">Create Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
